# CompositeEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  lint-fix.sh  lint.sh
asset-converter/: CMakeLists.txt
asset-converter/2d/: STBImageImporter.cpp  STBImageImporter.h
asset-converter/3d/: AnimationOptimizer.cpp  AnimationOptimizer.h
asset-converter/3d/fbx/: FBXAnimationImporter.cpp  FBXAnimationImporter.h  FBXImporter.cpp  FBXImporter.h  FBXMeshImporter.cpp  FBXMeshImporter.h  FBXSkeletonImporter.cpp  FBXSkeletonImporter.h  FBXUtilities.cpp  FBXUtilities.h  FBXValidator.cpp  FBXValidator.h
asset-converter/main/: Main.cpp
engine/: CMakeLists.txt  CompositeEngine.manifest
engine/common/: Math.h  NetworkConfig.h
engine/common/debug/: Assert.h  AssertThread.cpp  AssertThread.h
engine/common/json/: JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h
engine/core/: Camera.cpp  Camera.h  EditorCameraEventHandler.cpp  EditorCameraEventHandler.h  Engine.cpp  Engine.h  EngineEventHandler.cpp  EngineEventHandler.h  FpsCounter.cpp  FpsCounter.h  View.cpp  View.h  centralcore.cpp  centralcore.h
engine/core/clock/: Clock.cpp  Clock.h  GameTimeClock.h  RealTimeClock.h
engine/event/: AnimationStateEvent.cpp  AnimationStateEvent.h  AvailableAnimationEvent.cpp  AvailableAnimationEvent.h  FpsStateEvent.cpp  FpsStateEvent.h  PauseStateEvent.cpp  PauseStateEvent.h  SdlEvent.cpp  SdlEvent.h  SetAnimationEvent.cpp  SetAnimationEvent.h  SetAnimationTimeEvent.cpp  SetAnimationTimeEvent.h  SetRenderModeEvent.cpp  SetRenderModeEvent.h  ToggleBindPoseEvent.cpp  ToggleBindPoseEvent.h  TogglePauseEvent.cpp  TogglePauseEvent.h  ToggleRenderModeEvent.cpp  ToggleRenderModeEvent.h  WindowsMessageEvent.cpp  WindowsMessageEvent.h
engine/event/core/: Event.cpp  Event.h  EventId.h  EventListener.h  EventReceiver.h  EventSystem.cpp  EventSystem.h  EventType.h  ScheduledEvent.h  ScheduledEventKey.h
engine/graphics/: File3DImporter.h
engine/graphics/animation/: Animation.h  AnimationComponent.cpp  AnimationComponent.h  AnimationEventHandler.cpp  AnimationEventHandler.h  AnimationManager.cpp  AnimationManager.h
engine/graphics/ceasset/: AssetTraits.cpp  AssetTraits.h
engine/graphics/ceasset/input/: AssetDeserializer.cpp  AssetDeserializer.h  AssetImporter.cpp  AssetImporter.h  InputFileStream.cpp  InputFileStream.h
engine/graphics/ceasset/output/: AssetExporter.cpp  AssetExporter.h  AssetSerializer.cpp  AssetSerializer.h  OutputFileStream.cpp  OutputFileStream.h
engine/graphics/mesh/: Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshManager.cpp  MeshManager.h  Vertex.h
engine/graphics/shaders/: GridShader.frag  GridShader.vert  MeshShader.vert  SkeletonShader.vert  SkinnedMeshShader.vert  UIShader.frag  UIShader.vert  WireFrameDiffuseTextureShader.frag
engine/graphics/skeleton/: Skeleton.h  SkeletonManager.cpp  SkeletonManager.h
engine/graphics/texture/: Texture.h  TextureManager.cpp  TextureManager.h
engine/main/: Main.cpp
engine/network/: ClientService.cpp  ClientService.h
engine/server/: ServerMain.cpp
engine/ui/: BasicHandler.h  KevinReactThingy.html  KevinsABitch.html  KevinsABitch.js  UIApp.cpp  UIApp.h  UIBrowserProcessHandler.cpp  UIClient.cpp  UIClient.h  UILifeSpanHandler.h  UILoadHandler.cpp  UIQuery.cpp  UIQuery.h  UIQueryHandler.cpp  UIQueryHandler.h  UIQueryResponder.cpp  UIQueryResponder.h  UIRenderHandler.cpp  UIRenderHandler.h
engine/ui/cef/: UIApp.cpp  UIApp.h  UIBrowserProcessHandler.cpp  UIBrowserProcessHandler.h  UIClient.cpp  UIClient.h  UIExternalMessagePump.cpp  UIExternalMessagePump.h  UILifeSpanHandler.cpp  UILoadHandler.h  UIQuery.h  UIQueryHandler.cpp  UIQueryHandler.h  UIQueryResponder.cpp  UIQueryResponder.h  UIRenderHandler.cpp  UIRenderHandler.h  UIRenderProcessHandler.cpp  UIRenderProcessHandler.h  UIRequestHandler.cpp
engine/ui/message/: AnimationStateMessage.cpp  AnimationStateMessage.h  FailureMessage.cpp  FailureMessage.h  InputBufferStream.cpp  InputBufferStream.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h  MessageType.h  OutputBufferStream.cpp  OutputBufferStream.h  PauseStateMessage.cpp  PauseStateMessage.h  SetAnimationTimeMessage.cpp  SetAnimationTimeMessage.h  SuccessMessage.cpp  SuccessMessage.h  TogglePauseMessage.cpp  TogglePauseMessage.h  ToggleRenderModeMessage.cpp  ToggleRenderModeMessage.h  UIMessage.cpp  UIMessage.h  UIMessageId.h
engine/ui/web-ui/: package-lock.json  package.json
engine/ui/web-ui/.storybook/: webpack.config.js
engine/ui/web-ui/config/: webpackDevServer.config.js
engine/ui/web-ui/public/: index.html
engine/ui/web-ui/scripts/: start.js
engine/ui/web-ui/src/: App.css  App.js  index.html  index.js  ipc.js  theme.js  throttle.js
engine/ui/web-ui/stories/: index.stories.js
ui/: CMakeLists.txt  CompositeCefSubprocess.manifest
ui/cef/: CefMain.cpp  CefMain.h  WindowContentView.h  WindowContentView.mm
ui/cef/browser/: UIAppBrowser.cpp  UIAppBrowser.h  UIBrowserProcessHandler.cpp  UIBrowserProcessHandler.h  UIExternalMessagePump.cpp  UIExternalMessagePump.h  UIQuery.h  UIQueryHandler.cpp  UIQueryHandler.h  UIQueryResponder.cpp  UIQueryResponder.h
ui/cef/client/: UIClient.cpp  UIClient.h  UIContextMenuHandler.cpp  UIContextMenuHandler.h  UILifeSpanHandler.cpp  UILifeSpanHandler.h  UILoadHandler.cpp  UILoadHandler.h  UIRenderHandler.cpp  UIRenderHandler.h  UIRequestHandler.cpp  UIRequestHandler.h
ui/cef/subprocess/: Main.cpp  UIAppOther.cpp  UIAppOther.h  UIAppRender.cpp  UIAppRender.h  UIAppRenderer.cpp  UIAppRenderer.h  UIRenderProcessHandler.cpp  UIRenderProcessHandler.h
ui/web/: .babelrc  package-lock.json  package.json
ui/web/.storybook/: addons.js  config.js  webpack.config.js
ui/web/config/: paths.js  webpack.config.dev.js
ui/web/public/: index.html
ui/web/scripts/: start.js
ui/web/src/: App.js  index.html  index.js  ipc.js  theme.js
ui/web/src/Components/: AnimationControls.jsx  BnetAlert.jsx  (+2 more)
ui/web/stories/: index.stories.js
(+507 files in other folders)
